--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,10 +8,10 @@ titles_from_headings:
 
 # Modify the contents below for the specific project.
 
-title: "Capstone Project Proposal"       # Write the project title inside the quotes.
-description: "Trust me, it'll be cool!"  # Write the project description inside the quotes
+title: " Timely Project Proposal"       # Write the project title inside the quotes.
+description: " Timely the new way to keep track"  # Write the project description inside the quotes
 author:                                  # Don't do anything with this line!
-  name: "Java+Android Student"           # Write your name inside the quotes.
+  name: " Benjamin Quintana"           # Write your name inside the quotes.
 
 # Do not modify the following line!
   copyright: true  
